feat: rename endpoints
