# pkg/api/teams/routes.go
@@ -8,6 +8,7 @@ func SetupRoutes(r *gin.RouterGroup) {
 	r.POST("/", handlePOSTTeam)
 	r.GET("/:id", handleGETTeam)
 	r.DELETE("/:id", handleDELETETeam)
+	r.POST("/:id/rename", handlePOSTRename)
 	r.PUT("/:id/users", handlePUTTeamUsers)
 	r.GET("/:id/apps", handleGETTeamApps)
 }
