# swagger.yaml
@@ -191,6 +191,48 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorStatus"
+  /teams/{id}/rename:
+    post:
+      tags: [teams]
+      summary: Renames a team
+      parameters:
+        - in: path
+          name: id
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                Name:
+                  type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    $ref: "#/components/schemas/Status"
+                  team:
+                    $ref: "#/components/schemas/Team"
+        "400":
+          description: Invalid JSON
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorStatus"
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorStatus"
   /teams/{id}/users:
     put:
       tags: [teams]
@@ -364,6 +406,48 @@ paths:
                     $ref: "#/components/schemas/Status"
         "400":
           description: Invalid app ID
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorStatus"
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorStatus"
+  /apps/{id}/rename:
+    post:
+      tags: [apps]
+      summary: Renames an app
+      parameters:
+        - in: path
+          name: id
+          schema:
+            $ref: "#/components/schemas/ID"
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                Name:
+                  type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    $ref: "#/components/schemas/Status"
+                  app:
+                    $ref: "#/components/schemas/App"
+        "400":
+          description: Invalid JSON
           content:
             application/json:
               schema:
